<resources>
    <string name="app_name">Home Genie</string>
    <string name="home_genie_logo">Home Genie Logo</string>
    <string name="or">Or</string>
    <string name="password">password</string>
    <string name="user_name">username</string>
    <string name="login">login</string>
    <string name="hi_user">Hi %1$s !</string>
    <string name="home_genie">Home Genie</string>
    <string name="logout">logout</string>
    <string name="no_account_yet_register">No account yet? Register</string>
    <string name="email">email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="name">name</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="sign_up">sign up</string>
    <string name="action_share">share</string>
    <string name="email_us">email us</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_device">add device</string>
    <string name="delete">delete</string>
    <string name="remove">remove</string>
    <string name="device_name">Device name</string>
    <string name="device_mac_id">Device mac id</string>
    <string name="remove_from_room">remove from room</string>
    <string name="add_to_room">add to room</string>
    <string name="configure_device">configure a
        device</string>
    <string name="actions">Actions</string>
    <string name="toggle">Toggle</string>
    <string name="on">on</string>
    <string name="off">off</string>
</resources>
