<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:checked="true"
            android:icon="?attr/actionModeShareDrawable"
            android:title="@string/action_share"
            app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_configure_device"
            android:icon="@drawable/ic_settings_input_composite_black_24dp"
            android:title="@string/configure_device"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_email_us"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/email_us"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout"
            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/login"
            android:visible="true"
            app:showAsAction="ifRoom" />
    </group>

    <item android:title="@string/nav_support">

        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help" />
        </menu>
    </item>

</menu>