<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_add_to_room"
        android:icon="@drawable/ic_add_to_queue_black_24dp"
        android:orderInCategory="1"
        android:title="@string/add_to_room"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_remove_from_room"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="1"
        android:title="@string/remove_from_room"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_delete_device"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="withText" />


</menu>